<resources>
    <string name="app_name">Agro Care</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Disease Detection</string>

    <string name="buttonSelectPhoto">Select Photo</string>
    <string name="buttonTakePhoto">Start Camera</string>
    <string name="buttonDiagnose">Detect</string>
    <string name="defaultImage">Default image set now...</string>
    <string name="descriptionImage">View for displaying image</string>
    <string name="menu_area">Area Calculation</string>
    <string name="menu_profile">Profile</string>
    <string name="distance">Distance</string>
    <string name="custom_marker_remove">Remove Marker</string>
    <string name="text_pressure">Pressure</string>
    <string name="text_wind">Wind</string>
    <string name="text_sunrise">Sunrise</string>
    <string name="text_humidity">Humidity</string>
    <string name="text_visibility">Visibility</string>
    <string name="text_sunset">Sunset</string>
    <string name="version_app">Version 1.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="grow_week">Grow Weeks:</string>
    <string name="grow_day">Days:</string>
    <string name="grow_phase">Current Phase:</string>
    <string name="phase_week">Phase Weeks:</string>
    <string name="phase_day">Phase Days:</string>

    <string name="placeholder_parent_name">White Dwarf #3 G2</string>
    <string name="placeholder_days_since_start">0</string>
    <string name="placeholder_state_name">Flowering</string>
    <string name="parent_plant">Parent Plant:</string>
    <string name="plant_source">Crop Source:</string>

    <string name="plant_origin_seed">Seed</string>
    <string name="plant_origin_clone">Clone</string>

</resources>